# AI_reStarter

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AIReStarter.sln  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  MODERNIZATION_PLAN.md  MODERNIZATION_PLAN_CSHARP.md  MODERNIZATION_PLAN_RUST.md  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  TEST_COMPLETION_REPORT.md  config.template.json  config.toml  coverage.xml  create_sample_templates.py  kiro_auto_recovery.py  kiro_setup.py  main.py  pre-commit-check.bat  pre-commit-check.ps1  profiles.example.toml  pyproject.toml  renovate.json  requirements.txt  resources.rc  ruff.toml  test.bat  test_amazonq_integration.py  test_gui.py
.amazonq/rules/: coding_standards.md  development_environment.md  project_context.md  rules.md
.github/workflows/: ci-cd.yml  ci.yml  quality-check.yml  release.yml  security-check.yml
ai_restarter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
archive/: kiro_auto_recovery.py
archive/tests/: test_core_functions.py  test_kiro_auto_recovery.py
docs/: AMAZONQ_IMPLEMENTATION_PLAN.md  AMAZONQ_INTEGRATION_DESIGN.md  ARCHITECTURE_REFACTORING_DESIGN.md  MODERNIZATION_PLAN_CSHARP.md  OUTPUT_CONTROL_GUIDE.md  RELEASE_GUIDE.md  TROUBLESHOOTING_GUIDE.md  USER_MANUAL.md  csharp_poc_guidelines.md  docs_test_plan.md  docs_test_report.md
playground/: README.md  TEST_COMPLETION_REPORT.md  create_sample_templates.py  test_amazonq_integration.py  test_output_control.py
scripts/: README.md  build.bat  build_release.py  create_release_package.py  measure_project.py  pre-commit-check.ps1  release.ps1  test.bat  test_executable.py  trigger_release.py
src/: error.rs  lib.rs  main.rs
src/AIReStarter/: AIReStarter.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
src/AIReStarter/Config/: AppConfig.cs  ConfigLoader.cs
src/AIReStarter/Core/: DisplayManager.cs  MatchGuard.cs  ScreenCaptureService.cs  TemplateMatcher.cs
src/AIReStarter/Input/: InputSender.cs
src/AIReStarter/Interop/: DpiAwareness.cs
src/AIReStarter/Services/: ActionEngine.cs  HotKeyService.cs  MonitorService.cs
src/AIReStarter/UI/: SystemTrayManager.cs
src/config/: config_manager.py  loader.rs  mod.rs  template.rs
src/core/: action.rs  base_detector.py  detection_result.py  display.rs  execution_mode.rs  kiro_recovery.py  mod.rs  mode_manager.py  monitor.rs
src/gui/: amazonq_settings_dialog.py  log_viewer.py  main_window.py  mode_selector_widget.py  monitor_area_dialog.py  monitor_widget.py  settings_dialog.py  template_capture_dialog.py  template_manager.py
src/plugins/: __init__.py  amazonq_detector.py
src/ui/: mod.rs  setup_wizard.rs  state.rs  tray.rs
src/utils/: hotkey_manager.py  image_processing.py  output_controller.py  screen_capture.py
tests/: conftest.py  test_config.py  test_core_functions.py  test_error_detection.py  test_kiro_auto_recovery.py  test_runner.py  test_template_capture.py
tests/AIReStarter.Tests/: AIReStarter.Tests.csproj  ConfigLoaderPathTests.cs  MatchGuardTests.cs  TestPathHelper.cs  TomlParseTests.cs  UnitTest1.cs
tests/fixtures/: __init__.py
tests/gui/: __init__.py
tests/integration/: __init__.py  test_detection_workflow.py
tests/unit/: __init__.py  test_amazonq_detector.py  test_base_detector.py  test_config_manager.py  test_detection_result.py  test_image_processing.py  test_screen_capture.py
