[package]
name = "ai-restarter"
version = "2.0.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
# Image Processing
image = "0.25.9"
imageproc = "0.25"

# Windows API
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# Automation
enigo = "0.6.1"

# System Tray
tray-item = "0.10"

# GUI
egui = "0.33.2"
eframe = "0.33.2"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "2.0"
winit = "0.30"

[dev-dependencies]
criterion = "0.5"
mockall = "0.13"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
