[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-restarter"
version = "0.2.2"
description = "AI reStarter - AI統合IDE用自動復旧システム"
authors = [{name = "Kiro Development Team"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "restarter", "amazonq", "auto-recovery", "screen-capture", "error-detection", "template-matching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "keyboard>=0.13.5",
    "pywin32>=306; sys_platform == 'win32'",
    "pyperclip>=1.8.2",
]

[tool.ruff]
target-version = "py311"
line-length = 88
# Black互換性を保持しつつ、幅広いチェックを実施
lint.select = ["ALL"]
lint.ignore = ["D", "ANN", "COM812", "ISC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["archive/", "htmlcov/", ".mypy_cache/", ".ruff_cache/", "playground/"]

# GUIファイルはtkinterの型定義が不完全なため、チェックを緩和
[[tool.mypy.overrides]]
module = [
    "src.gui.log_viewer",
    "src.gui.monitor_area_dialog",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unreachable = false

# 外部ライブラリの型スタブが利用できない場合は無視
[[tool.mypy.overrides]]
module = [
    "cv2",
    "numpy",
    "pyautogui",
    "win32con",
    "win32gui",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: 単体テスト用のマーカー",
    "integration: 統合テスト用のマーカー",
    "gui: GUIテスト用のマーカー",
    "slow: 実行時間が長いテスト用のマーカー"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/archive/*",
    "*/htmlcov/*",
    "*/.mypy_cache/*",
    "*/.ruff_cache/*"
]

[tool.setuptools]
py-modules = ["kiro_auto_recovery", "kiro_setup"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "types-Pillow>=10.0.0",
    "types-psutil>=6.0.0",
    "types-keyboard>=0.13.0",
    "types-pyautogui>=0.9.0",
    "types-pywin32>=306.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "ipython>=8.21.0",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
