[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-restarter"
version = "0.2.2"
description = "AI reStarter - AI統合IDE用自動復旧システム"
authors = [{name = "Kiro Development Team"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "restarter", "amazonq", "auto-recovery", "screen-capture", "error-detection", "template-matching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "keyboard>=0.13.5",
    "pywin32>=306; sys_platform == 'win32'",
    "pyperclip>=1.8.2",
]

[tool.ruff]
target-version = "py311"
line-length = 88
include = ["src/**/*.py", "tests/**/*.py", "main.py"]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "archive",
]

[tool.ruff.lint]
# Black互換性を保持しつつ、幅広いチェックを実施
select = ["ALL"]
ignore = [
    "D",       # pydocstyle (ドキュメント規約)
    "ANN",     # flake8-annotations (型アノテーション強制)
    "COM812",  # trailing-comma-missing (ruff formatと競合)
    "ISC001",  # single-line-implicit-string-concatenation (ruff formatと競合)
    "E501",    # line-too-long (ruff formatが処理)
    "E203",    # whitespace-before-punctuation (ruff formatと競合)
    "B008",    # function-call-in-default-argument
    "G004",    # logging-f-string (f-stringをロギングで使用可)
    "PTH",     # flake8-use-pathlib (pathlibへの移行は段階的に)
    "BLE001",  # blind-except (Exceptionキャッチは許容)
    "TRY",     # tryceratops (try/exceptの詳細ルールは緩和)
    "RET504",  # unnecessary-assign (可読性のため許容)
    "PLR2004", # magic-value-comparison (マジックナンバーは文脈による)
    "PLC0415", # import-outside-toplevel (遅延インポートを許容)
    "RET505",  # superfluous-else-return (明示的なelse許容)
    "RUF001",  # ambiguous-unicode-character-string (日本語文字列で使用)
    "RUF002",  # ambiguous-unicode-character-docstring (日本語docstring)
    "RUF003",  # ambiguous-unicode-character-comment (日本語コメント)
    "C901",    # complex-structure (複雑度チェックは段階的に)
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "S",       # flake8-bandit (セキュリティチェックは段階的に)
    "FBT",     # flake8-boolean-trap (bool引数は許容)
    "EM",      # flake8-errmsg (エラーメッセージの文字列リテラル許容)
    "PIE790",  # no-unnecessary-pass (pass文は明示的に許容)
    "ERA001",  # eradicate (コメントアウトされたコードは段階的に削除)
    "G201",    # logging-exception-exc-info (exc_info=Trueは許容)
    "SLF001",  # private-member-access (プライベートメンバーアクセスは許容)
    "TID252",  # relative-imports (相対インポートは許容)
    "RUF012",  # mutable-class-default (クラスのミュータブル属性は許容)
    "PERF203", # try-except-in-loop (ループ内try-exceptは許容)
    "F401",    # unused-import (条件付きインポートで必要)
    "PERF102", # dict-values (itemsの使用は明示的に許容)
    "ARG",     # flake8-unused-arguments (イベントハンドラで必要)
    "DTZ",     # flake8-datetimez (タイムゾーンなしdatetimeは許容)
    "SIM",     # flake8-simplify (簡素化は段階的に)
    "T201",    # print-found (デバッグprintは段階的に削除)
    "NPY002",  # numpy-legacy-random (テストコードで legacy random使用許容)
    "PT009",   # pytest-unittest-assertion (unittest形式のアサート許容)
    "PT011",   # pytest-raises-too-broad (汎用Exception許容)
    "PT012",   # pytest-raises-with-multiple-statements (複数文のraises許容)
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # テストでの例外を緩和
"main.py" = ["E402"]        # メインファイルでのインポート順序を緩和

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["archive/", "htmlcov/", ".mypy_cache/", ".ruff_cache/", "playground/", "tests/", "scripts/"]

# GUIファイルはtkinterの型定義が不完全なため、チェックを緩和
[[tool.mypy.overrides]]
module = [
    "src.gui.log_viewer",
    "src.gui.monitor_area_dialog",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unreachable = false

# 外部ライブラリの型スタブが利用できない場合は無視
[[tool.mypy.overrides]]
module = [
    "cv2",
    "numpy",
    "pyautogui",
    "win32con",
    "win32gui",
    "keyboard",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-p", "pytest_cov",
    "-p", "pytest_mock",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: 単体テスト用のマーカー",
    "integration: 統合テスト用のマーカー",
    "gui: GUIテスト用のマーカー",
    "slow: 実行時間が長いテスト用のマーカー"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/archive/*",
    "*/htmlcov/*",
    "*/.mypy_cache/*",
    "*/.ruff_cache/*"
]

[tool.setuptools]
py-modules = ["kiro_auto_recovery", "kiro_setup"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "types-Pillow>=10.0.0",
    "types-psutil>=6.0.0",
    "types-keyboard>=0.13.0",
    "types-pyautogui>=0.9.0",
    "types-pywin32>=306.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "ipython>=8.21.0",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
